--- a/src/Styles/Hero.css
+++ b/src/Styles/Hero.css
@@ -1,93 +1,105 @@
-.hero
-{
+.hero {
     width: 100%;
     height: 100vh;
     position: relative;
     background: url('https://images.unsplash.com/photo-1531951286638-d1b6cdae30c9?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    
     background-repeat: no-repeat;
     object-fit: cover;
-    background-position: bottom 30% left 80% ;
+    background-position: bottom 30% left 80%;
 }
-.hero img{
+
+.hero img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.hero-text
-{
+.hero-text {
     position: absolute;
-    top: 55%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 100%;
     text-align: center;
 }
 
-.hero-text h1{
+.hero-text h1 {
     font-size: 3rem;
     font-weight: 800;
     color: white;
-    background:#fff;
+    background: #fff;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.hero-text p{
+
+.hero-text p {
     font-size: 1.3rem;
     padding: 0.5rem 0 2rem 0;
     color: white;
 }
 
-.hero-text button
-{
-    
+.hero-text button {
     background: #fff;
     padding: 1rem 2rem;
     border-radius: 6px;
     font-size: 1.1rem;
     font-weight: bold;
     letter-spacing: 2px;
-
     border: none;
     outline: none;
 }
+
 .hero-text button a {
     color: black;
     text-decoration: none;
-   
 }
 
-@media screen and (max-width:788px) {
-   
- .hero-text h1 
- {
-    padding: 10px 50px;
- }  
-
-}
-@media screen and (max-width:458px) {
-    .hero {
-       background-image: url('https://images.unsplash.com/photo-1713885645479-4dbf937c0c8c?q=80&w=1778&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-        background-position: bottom 10% left 90% ; 
+@media screen and (max-width: 355px) {
+    .hero-text h1 {
+        font-size: 2rem;
     }
 
- .hero-text h1 
- {
-    font-size: 23px;
-   
- }  
- .hero-text p
- {
-    font-size: 20px;
-    padding: 10px 20px;
-    margin-bottom: 20px;
- }  
-
+    .hero-text p {
+        font-size: 1rem;
+    }
 }
 
+@media screen and (min-width: 356px) and (max-width: 488px) {
+    .hero-text h1 {
+        font-size: 2.5rem;
+    }
 
-  
+    .hero-text p {
+        font-size: 1.1rem;
+    }
+}
 
+@media screen and (min-width: 489px) and (max-width: 500px) {
+    .hero-text h1 {
+        font-size: 2.8rem;
+    }
 
+    .hero-text p {
+        font-size: 1.2rem;
+    }
+}
 
+@media screen and (min-width: 501px) and (max-width: 788px) {
+    .hero-text h1 {
+        font-size: 2.8rem;
+    }
+
+    .hero-text p {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (min-width: 789px) {
+    .hero-text h1 {
+        font-size: 3rem;
+    }
+
+    .hero-text p {
+        font-size: 1.3rem;
+    }
+}
