--- a/src/Styles/Expertice.css
+++ b/src/Styles/Expertice.css
@@ -1,190 +1,280 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
-
-:root {
-  /* Colors */
-  --brand-color: hsl(46, 100%, 50%);
-  --black: hsl(0, 0%, 0%);
-  --white: hsl(0, 0%, 100%);
-  /* Fonts */
-  --font-title: "Montserrat", sans-serif;
-  --font-text: "Lato", sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap");
 
 .Expertice-cointainer {
-    padding: 40px 80px;
-  
+  padding: 40px 80px;
 }
 .Expertice-cointainer h3 {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 30px;
+  font-size: 30px;
 }
 
-h2 {
-  font-size: 2.25rem;
-  font-family: var(--font-title);
-  color: var(--white);
-  line-height: 1.1;
-}
-
-p {
-  font-family: var(--font-text);
-  font-size: 1rem;
-  line-height: 1.5;
-  color: var(--white);
-}
-
-.flow > * + * {
-  margin-top: var(--flow-space, 1em);
-}
-
-/* CARD COMPONENT */
-.Card-cointainer
-{
-    display: flex;
-  gap: 60px;
-  flex-wrap: wrap;
-   
-}
-.card {
-  display: grid;
-  place-items: center;
-  width: 80vw;
-  max-width: 17.875rem;
-  height: 25.125rem;
+#container {
+  box-shadow: 0 15px 30px 1px grey;
+  background: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  border-radius: 5px;
   overflow: hidden;
-  border-radius: 0.625rem;
-  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+  height: 300px;
+  width: 600px;
+  /* margin-bottom: 70px; */
 }
 
-.card > * {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+.product {
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 100px;
+  flex-wrap: wrap;
 }
 
-.card__background {
-  object-fit: cover;
-  max-width: 100%;
+.product-details {
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+  padding: 20px;
+  height: 100%;
+  float: left;
+  width: 50%;
+}
+
+#container .product-details h1 {
+  font-family: "Bebas Neue", cursive;
+  display: inline-block;
+  position: relative;
+  font-size: 26px;
+  color: #344055;
+  margin: 0;
+}
+
+#container .product-details h1:before {
+  position: absolute;
+  content: "";
+  right: 0%;
+  top: 0%;
+  transform: translate(25px, -15px);
+  font-family: "Bree Serif", serif;
+  display: inline-block;
+  background: #ffe6e6;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 5px;
+  color: white;
+  margin: 0;
+  animation: chan-sh 6s ease infinite;
+}
+
+.hint-star {
+  display: block;
+  margin-left: 0.4em;
+  color: gold;
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+#container .product-details > p {
+  font-family: "EB Garamond", serif;
+  text-align: center;
+  font-size: 18px;
+  color: #7d7d7d;
+}
+.control {
+  position: absolute;
+  bottom: 10%;
+  left: 22.8%;
+}
+.btn {
+  transform: translateY(0px);
+  transition: 0.3s linear;
+  background: #809fff;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  color: #eee;
+  padding: 0;
+  margin: 0;
+}
+
+.btn:hover {
+  transform: translateY(-6px);
+  background: #1a66ff;
+}
+
+.btn span {
+  font-family: "Farsan", cursive;
+  transition: transform 0.3s;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  margin: 0;
+}
+.btn .price,
+.shopping-cart {
+  background: #333;
+  border: 0;
+  margin: 0;
+}
+
+.btn .price {
+  transform: translateX(-10%);
+  padding-right: 15px;
+}
+
+.btn .shopping-cart {
+  transform: translateX(-100%);
+  position: absolute;
+  background: #333;
+  z-index: 1;
+  left: 0;
+  top: 0;
+}
+
+.btn .buy {
+  z-index: 3;
+  font-weight: bolder;
+}
+
+.btn:hover .price {
+  transform: translateX(-110%);
+}
+
+.btn:hover .shopping-cart {
+  transform: translateX(0%);
+}
+
+
+.product-image {
+  transition: all 0.3s ease-out;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  float: right;
+  width: 40%;
+  display: inline-block;
+}
+
+#container img {
+  width: 100%;
   height: 100%;
 }
 
-.card__content {
-  --flow-space: 0.9375rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-self: flex-end;
-  height: 65%;
-  padding: 12% 1.25rem 1.875rem;
-  background: linear-gradient(
-    180deg,
-    hsla(0, 0%, 0%, 0) 0%,
-    hsla(0, 0%, 0%, 0.3) 10%,
-    hsl(0, 0%, 0%) 100%
-  );
-}
-
-.card__content--container {
-  --flow-space: 1.25rem;
-}
-
-.card__title {
-  position: relative;
-  width: fit-content;
-  width: -moz-fit-content; /* Prefijo necesario para Firefox  */
-}
-
-.card__title::after {
-  content: "";
+.info {
+  background: rgba(27, 26, 26, 0.9);
+  font-family: "Bree Serif", serif;
+  transition: all 0.3s ease-out;
+  transform: translateX(-100%);
   position: absolute;
-  height: 0.3125rem;
-  width: calc(100% + 1.25rem);
-  bottom: calc((1.25rem - 0.5rem) * -1);
-  left: -1.25rem;
-  background-color: var(--brand-color);
+  line-height: 2;
+  text-align: left;
+  font-size: 102%;
+  cursor: no-drop;
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+.info ul {
+  margin-left: 3px;
 }
 
-.card__button {
-  padding: 0.75em 1.6em;
-  width: fit-content;
-  width: -moz-fit-content; /* Prefijo necesario para Firefox  */
-  font-variant: small-caps;
-  font-weight: bold;
-  border-radius: 0.45em;
-  border: none;
-  background-color: var(--brand-color);
-  font-family: var(--font-title);
-  font-size: 1.125rem;
-  color: var(--black);
+.info h2 {
+  text-align: center;
+  font-size: 20px;
+}
+.product-image:hover .info {
+  transform: translateX(0);
 }
 
-.card__button:focus {
-  outline: 2px solid black;
-  outline-offset: -5px;
+.info ul li {
+  transition: 0.3s ease;
+}
+.info ul li:hover {
+  transform: translateX(50px) scale(1.2);
+  font-size: 13px;
 }
 
-@media (any-hover: hover) and (any-pointer: fine) {
-  .card__content {
-    transform: translateY(62%);
-    transition: transform 500ms ease-out;
-    transition-delay: 500ms;
-  }
-
-  .card__title::after {
-    opacity: 0;
-    transform: scaleX(0);
-    transition: opacity 1000ms ease-in, transform 500ms ease-out;
-    transition-delay: 500ms;
-    transform-origin: right;
-  }
-
-  .card__background {
-    transition: transform 500ms ease-in;
-  }
-
-  .card__content--container > :not(.card__title),
-  .card__button {
-    opacity: 0;
-    transition: transform 500ms ease-out, opacity 500ms ease-out;
-  }
-
-  .card:hover,
-  .card:focus-within {
-    transform: scale(1.05);
-    transition: transform 500ms ease-in;
-  }
-
-  .card:hover .card__content,
-  .card:focus-within .card__content {
-    transform: translateY(0);
-    transition: transform 500ms ease-in;
-  }
-
-  .card:focus-within .card__content {
-    transition-duration: 0ms;
-  }
-
-  .card:hover .card__background,
-  .card:focus-within .card__background {
-    transform: scale(1.3);
-  }
-
-  .card:hover .card__content--container > :not(.card__title),
-  .card:hover .card__button,
-  .card:focus-within .card__content--container > :not(.card__title),
-  .card:focus-within .card__button {
-    opacity: 1;
-    transition: opacity 500ms ease-in;
-    transition-delay: 1000ms;
-  }
-
-  .card:hover .card__title::after,
-  .card:focus-within .card__title::after {
-    opacity: 1;
-    transform: scaleX(1);
-    transform-origin: left;
-    transition: opacity 500ms ease-in, transform 500ms ease-in;
-    transition-delay: 500ms;
-  }
+.product-image:hover img {
+  transition: all 0.3s ease-out;
+}
+.product-image:hover img {
+  transform: scale(1.2, 1.2);
 }
 
+@media screen and (max-width: 469px) {
+  .Expertice-cointainer {
+    padding: 40px;
+  }
+
+  #container {
+    height: 200px;
+    width: 350px;
+  }
+
+  .product {
+    gap: 60px;
+  }
+
+  .product-details {
+    padding: 10px;
+    width: 60%;
+  }
+
+  #container .product-details h1 {
+    font-size: 25px;
+  }
+
+  #container .product-details > p {
+	/* margin-top: px; */
+    font-size: 15px;
+  }
+
+  .control {
+    bottom: 3%;
+    left: 15.8%;    
+  }
+
+  .btn span {
+    padding: 5px 10px;
+    font-size: 1.1em;
+  }
+
+  
+  .info {
+	font-size: 60%;
+  }
+  .info ul li {
+	margin-bottom: 7px;
+  }
+  .info h2 {
+	font-size: 15px;
+  }
+	.info ul li:hover {
+		transform: translateX(30px) scale(1.5); 
+		font-size: 7px;
+		white-space: normal;
+		max-width: 80%; 
+		overflow: hidden;
+		font-weight: bold;
+  }
+  
+  
+  .product-image:hover img {
+	transform: scale(1.4, 1.4);
+  }
+  
+  
+ 
+
+  
+
+ 
+
+  
+
+ 
+}
