--- a/src/Styles/Expertice.css
+++ b/src/Styles/Expertice.css
@@ -2,13 +2,29 @@
 
 .Expertice-cointainer {
   padding: 40px 80px;
+  background: rgb(244,225,193);
+  background: linear-gradient(162deg, rgba(244,225,193,1) 0%, rgba(215,226,242,1) 48%, rgba(183,228,199,1) 100%);
+
 }
 .Expertice-cointainer h3 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   margin-top: 30px;
   font-size: 30px;
+  position: relative; /* Make the h3 a positioned element */
 }
+
+.Expertice-cointainer h3::after {
+  content: ''; /* Required for the pseudo-element */
+  position: absolute;
+  bottom: -10px; /* Adjust this value to control the distance of the underline from the text */
+  left: 50.3%; /* Position the underline in the middle */
+  transform: translateX(-50%); /* Center the underline horizontally */
+  width: 100px; /* Adjust the width of the underline */
+  height: 2.5px; /* Adjust the thickness of the underline */
+  background-color: #000; /* Color of the underline */
+}
+
 
 #container {
   box-shadow: 0 15px 30px 1px grey;
