--- a/src/Styles/Expertice.css
+++ b/src/Styles/Expertice.css
@@ -2,8 +2,8 @@
 
 .Expertice-cointainer {
   padding: 40px 80px;
-  background: rgb(244,225,193);
-  background: linear-gradient(162deg, rgba(244,225,193,1) 0%, rgba(215,226,242,1) 48%, rgba(183,228,199,1) 100%);
+  /* background: rgb(244,225,193);
+  background: linear-gradient(162deg, rgba(244,225,193,1) 0%, rgba(215,226,242,1) 48%, rgba(183,228,199,1) 100%); */
 
 }
 .Expertice-cointainer h3 {
