--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 80px;
-    background: rgb(214,232,249);
-background: linear-gradient(90deg, rgba(214,232,249,1) 0%, rgba(215,226,242,1) 50%, rgba(177,204,246,1) 100%);
+    background: var(--secondary-color);
+    /* background: rgb(214,232,249);
+background: linear-gradient(90deg, rgba(214,232,249,1) 0%, rgba(215,226,242,1) 50%, rgba(177,204,246,1) 100%); */
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     z-index: 999;
     position: fixed;
