--- a/src/Styles/Service.css
+++ b/src/Styles/Service.css
@@ -1,7 +1,7 @@
 .service-cointainer {
     padding: 40px 80px;
-    background: rgb(244,225,193);
-    background: linear-gradient(162deg, rgba(244,225,193,1) 0%, rgba(215,226,242,1) 48%, rgba(183,228,199,1) 100%);
+/* background-color: var(--secondary-color);    */
+
 }
 
 .service-cointainer .title {
@@ -72,12 +72,22 @@
         padding: 40px;
     }
     .box {
-       
         margin: 10px auto;
-        
-      
     }
-
+    .box i {
+        margin-bottom: 10px;
+    }
+    
+    .box h3 {
+        margin-bottom: 0px;
+       
+        
+    }
+    
+    .box p {
+        font-weight: 300;
+       
+    }
 
 }
 
@@ -87,9 +97,6 @@
     height: 200px;
     border-radius: 10px;
 }
-
-
-
 
 
    
