--- a/src/Styles/Choose.css
+++ b/src/Styles/Choose.css
@@ -32,12 +32,12 @@
 /* Your existing CSS */
 
 /* Add hover effect on images */
-img {
+.display__card img {
     width: 100%;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
   
-  img:hover {
+ .display__card img:hover {
     transform: scale(1.05) rotate(3deg); /* Zoom in by 5% and rotate slightly on hover */
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Add shadow on hover */
   }
