--- a/src/Styles/Expertice.css
+++ b/src/Styles/Expertice.css
@@ -2,29 +2,26 @@
 
 .Expertice-cointainer {
   padding: 40px 80px;
-  /* background: rgb(244,225,193);
-  background: linear-gradient(162deg, rgba(244,225,193,1) 0%, rgba(215,226,242,1) 48%, rgba(183,228,199,1) 100%); */
-
 }
+
 .Expertice-cointainer h3 {
   text-align: center;
   margin-bottom: 50px;
   margin-top: 30px;
   font-size: 30px;
-  position: relative; /* Make the h3 a positioned element */
+  position: relative;
 }
 
 .Expertice-cointainer h3::after {
-  content: ''; /* Required for the pseudo-element */
+  content: '';
   position: absolute;
-  bottom: -10px; /* Adjust this value to control the distance of the underline from the text */
-  left: 50.3%; /* Position the underline in the middle */
-  transform: translateX(-50%); /* Center the underline horizontally */
-  width: 100px; /* Adjust the width of the underline */
-  height: 2.5px; /* Adjust the thickness of the underline */
-  background-color: #000; /* Color of the underline */
+  bottom: -10px;
+  left: 50.3%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 2.5px;
+  background-color: #000;
 }
-
 
 #container {
   box-shadow: 0 15px 30px 1px grey;
@@ -34,12 +31,10 @@
   overflow: hidden;
   height: 300px;
   width: 600px;
-  /* margin-bottom: 70px; */
 }
 
 .product {
   display: flex;
-  /* justify-content: space-between; */
   gap: 100px;
   flex-wrap: wrap;
 }
@@ -94,11 +89,13 @@
   font-size: 18px;
   color: #7d7d7d;
 }
+
 .control {
   position: absolute;
   bottom: 10%;
   left: 22.8%;
 }
+
 .btn {
   transform: translateY(0px);
   transition: 0.3s linear;
@@ -127,6 +124,7 @@
   font-size: 1.2em;
   margin: 0;
 }
+
 .btn .price,
 .shopping-cart {
   background: #333;
@@ -161,7 +159,6 @@
   transform: translateX(0%);
 }
 
-
 .product-image {
   transition: all 0.3s ease-out;
   display: inline-block;
@@ -194,6 +191,7 @@
   left: 0;
   top: 0;
 }
+
 .info ul {
   margin-left: 3px;
 }
@@ -202,6 +200,7 @@
   text-align: center;
   font-size: 20px;
 }
+
 .product-image:hover .info {
   transform: translateX(0);
 }
@@ -209,6 +208,7 @@
 .info ul li {
   transition: 0.3s ease;
 }
+
 .info ul li:hover {
   transform: translateX(50px) scale(1.2);
   font-size: 13px;
@@ -217,6 +217,7 @@
 .product-image:hover img {
   transition: all 0.3s ease-out;
 }
+
 .product-image:hover img {
   transform: scale(1.2, 1.2);
 }
@@ -245,13 +246,12 @@
   }
 
   #container .product-details > p {
-	/* margin-top: px; */
     font-size: 15px;
   }
 
   .control {
     bottom: 3%;
-    left: 15.8%;    
+    left: 15.8%;
   }
 
   .btn span {
@@ -259,38 +259,28 @@
     font-size: 1.1em;
   }
 
-  
   .info {
-	font-size: 60%;
+    font-size: 60%;
   }
+
   .info ul li {
-	margin-bottom: 7px;
+    margin-bottom: 7px;
   }
+
   .info h2 {
-	font-size: 15px;
+    font-size: 15px;
   }
-	.info ul li:hover {
-		transform: translateX(30px) scale(1.5); 
-		font-size: 7px;
-		white-space: normal;
-		max-width: 80%; 
-		overflow: hidden;
-		font-weight: bold;
+
+  .info ul li:hover {
+    transform: translateX(30px) scale(1.5);
+    font-size: 7px;
+    white-space: normal;
+    max-width: 80%;
+    overflow: hidden;
+    font-weight: bold;
   }
-  
-  
+
   .product-image:hover img {
-	transform: scale(1.4, 1.4);
+    transform: scale(1.4, 1.4);
   }
-  
-  
- 
-
-  
-
- 
-
-  
-
- 
 }
