--- a/src/Styles/Gallery.css
+++ b/src/Styles/Gallery.css
@@ -80,3 +80,9 @@
 	background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255 ,255 , 0) 100%);
 	transition: .3s;
 }
+@media (max-width: 640px) {
+	.gallery__caption{
+		font-size: 10px;
+		padding: 1px;
+	}
+  }
