--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,4 +1,4 @@
-.about-cointainer {
+/* .about-cointainer {
   padding: 40px 20px;
 }
 
@@ -127,6 +127,199 @@ background-color: #000;
 
 .card2:hover {
   background: url('https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg') left center no-repeat;
+  background-size: 600px;
+}
+
+.card2:hover h2,
+.card2:hover .favicon {
+  opacity: 1;
+}
+
+.card h2 {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: white;
+  margin: 20px;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.favicon {
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.icons {
+  position: absolute;
+  fill: #fff;
+  color: #fff;
+  height: 130px;
+  top: 226px;
+  width: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
+
+@media screen and (min-width: 688px) {
+  .about-content {
+      flex-direction: row;
+  }
+
+  .about-image {
+      width: 35%;
+  }
+
+  .about-des {
+      width: 65%;
+  }
+   
+}
+
+@media screen and (max-width: 688px) {
+.about-des p {
+  padding: 2px 5px;
+  margin-bottom: 15px;
+  font-size: 15px;
+}
+}
+
+@media screen and (min-width: 788px) {
+  .about-cointainer {
+      padding: 40px 80px;
+  }
+} */
+.about-cointainer {
+  padding: 40px 20px;
+}
+
+.about-cointainer h3 {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.about-cointainer h3::after{
+content: '';
+position: absolute;
+bottom: -10px;
+left: 50.5%;
+transform: translateX(-50%);
+width: 100px;
+height: 2.1px;
+background-color: #000; 
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px;
+}
+
+.about-image {
+  width: 100%;
+}
+
+.about-image img {
+  width: 100%;
+}
+
+.about-des {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.about-des p {
+  padding: 2px 20px;
+  margin-bottom: 20px;
+  font-size: 19px;
+}
+
+
+.founder .title {
+  margin-top: 30px;
+}
+
+
+.founder-container {
+  width: 100%;
+  justify-content: space-around;
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  
+}
+
+.border {
+  height: 369px;
+  width: 290px;
+  background: transparent;
+  border-radius: 10px;
+  transition: border 1s;
+  position: relative;
+}
+
+.border:hover {
+  border: 1px solid white;
+}
+
+.card {
+  height: 379px;
+  width: 300px;
+  background: grey;
+  border-radius: 10px;
+  transition: background 0.8s;
+  overflow: hidden;
+  background: black;
+  box-shadow: 0 70px 63px -60px #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.card0 {
+  background: url('https://images.unsplash.com/photo-1453396450673-3fe83d2db2c4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFuJTIwZGFya3xlbnwwfHwwfHx8MA%3D%3D') center center no-repeat;
+  background-size: 300px;
+}
+
+.card0:hover {
+  background: url('https://images.unsplash.com/photo-1453396450673-3fe83d2db2c4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWFuJTIwZGFya3xlbnwwfHwwfHx8MA%3D%3D') left center no-repeat;
+  background-size: 600px;
+}
+
+.card0:hover h2,
+.card0:hover .favicon {
+  opacity: 1;
+}
+
+.card1 {
+  background: url('https://images.unsplash.com/photo-1485014749802-1dba3a03984c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fG1hbiUyMGRhcmt8ZW58MHx8MHx8fDA%3D') center center no-repeat;
+  background-size: 300px;
+}
+
+.card1:hover {
+  background: url("https://images.unsplash.com/photo-1485014749802-1dba3a03984c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fG1hbiUyMGRhcmt8ZW58MHx8MHx8fDA%3D") left center no-repeat;
+  background-size: 600px;
+}
+
+.card1:hover h2,
+.card1:hover .favicon {
+  opacity: 1;
+}
+
+.card2 {
+  background: url('https://images.unsplash.com/photo-1507081323647-4d250478b919?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fG1hbiUyMGRhcmt8ZW58MHx8MHx8fDA%3D') center center no-repeat;
+  background-size: 300px;
+}
+
+.card2:hover {
+  background: url('https://images.unsplash.com/photo-1507081323647-4d250478b919?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fG1hbiUyMGRhcmt8ZW58MHx8MHx8fDA%3D') left center no-repeat;
   background-size: 600px;
 }
 
