--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,111 +1,198 @@
-
-.contact i {
-    font-size: 20px;
-  position: relative;
-  bottom: 20px;
+.contact-form {
+  padding: 1rem;
+  color: #212d31;
+  font-family: 'Roboto', sans-serif;
 }
-.form-details   {
-    display: flex;
-    justify-content: space-around;
-    margin: 30px;
-    padding: 80px;
-    border: 1px solid #e1e1e1;
+
+.contact-form .contain {
+  background-color: #eee;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh; /* Ensures the form is vertically centered */
+  position: relative;
+}
+
+.contact-form .icon {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: green;
+  align-items: center;
+  text-align: center;
+  top: 15px;
+  left: 20px;
+  cursor: pointer;
+}
+
+.contact-form .icon i {
+  font-size: 18px;
+  color: #fff;
+  margin: 10px;
+}
+
+.contact-form .wrapper {
+  background-color: #fff;
+  padding: 2em;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 800px;
+}
+
+.contact-form .form {
+  background-color: #fff;
+}
+
+.contact-form .contact-wrapper {
+  margin: auto 0;
+}
+
+.contact-form .submit-btn {
+  float: left;
+}
+
+.contact-form .reset-btn {
+  float: right;
+}
+
+.contact-form .form-headline:after {
+  content: "";
+  display: block;
+  width: 10%;
+  padding-top: 10px;
+  border-bottom: 3px solid #ec1c24;
+}
+
+.contact-form .highlight-text {
+  color: #ec1c24;
+}
+
+.contact-form .hightlight-contact-info {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+.contact-form .highlight-text-grey {
+  font-weight: 500;
+}
+
+.contact-form .email-info {
+  margin-top: 20px;
+}
+
+.contact-form ::-webkit-input-placeholder {
+  /* Chrome */
+  font-family: 'Roboto', sans-serif;
+}
+
+.contact-form .required-input {
+  color: black;
+}
+
+@media (min-width: 600px) {
+  .contact-form .contain {
+    padding: 0;
   }
-  .form-details form {
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+}
+
+.contact-form h3,
+.contact-form ul {
+  margin: 0;
+}
+
+.contact-form h3 {
+  margin-bottom: 1rem;
+}
+
+.contact-form .form-input:focus,
+.contact-form textarea:focus {
+  outline: 1.5px solid #ec1c24;
+}
+
+.contact-form .form-input,
+.contact-form textarea {
+  width: 100%;
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+}
+
+.contact-form .wrapper > * {
+  padding: 1em;
+}
+
+@media (min-width: 700px) {
+  .contact-form .wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
   }
-    .form-details  form input,
-  .form-details form textarea {
-    width: 100%;
-    padding: 12px 15px;
-    outline: none;
-    margin-bottom: 20px;
-    border: 1px solid #e1e1e1;
+  .contact-form .wrapper > * {
+    padding: 2em 2em;
   }
-  .form-details  form button {
-    font-size: 13px;
-    font-weight: 600;
-    padding: 11px 18px;
-    color: white;
-    cursor: pointer;
-    border: 1px solid white;
-    border-radius: 5px;
-    outline: none;
-    background-color: #088178;
-  }
-  .form-details  .people div {
-    padding-bottom: 25px;
-    display: flex;
-    align-items: flex-start;
-  }
-  .form-details  .people div img {
-    width: 65px;
-    height: 65px;
-    object-fit: cover;
-    margin-right: 15px;
-  }
-  .form-details  .people div p {
-    margin: 0;
-    font-size: 13px;
-    line-height: 30px;
-  }
-  .form-details  .people div span {
-    display: block;
-    font-size: 16px;
-    font-weight: 600;
-    color: black;
-  }
-  @media (max-width: 793px) {
-    .form-details  {
-      padding: 40px;
-    }
-    .form-details  form {
-      width: 50%;
-    }
-  }
-  @media (max-width: 477px) {
-    .Contact-section {
-      height: 25vh;
-    }
-    .Contact-section p {
-      font-size: 20px;
-    }
-    .Contact-section  h2{
-font-size: 35px;
-margin-top: 20px;
-    }
-    .Contact-Details {
-      flex-direction: column;
-    }
-    .Contact-Details .details {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-    .Contact-Details .Map {
-      width: 100%;
-    }
-    .form-details {
-      margin: 10px;
-      padding: 30px 10px;
-      flex-wrap: wrap;
-    }
-    .form-details form {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-    .form-details .people {
-      margin-right: 10px;
-     
-    }
-    .contacttoast
-    {
-      width: 250px;
-      height: 50px;
-      font-size: 13px;
-      padding: 10px;
-      margin: 10px 80px;
-    }
-  }
+}
+
+.contact-form ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contact-form .contacts {
+  color: #212d31;
+}
+
+.contact-form .form {
+  background: #fff;
+}
+
+.contact-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.contact-form form label {
+  display: block;
+}
+
+.contact-form form p {
+  margin: 0;
+}
+
+.contact-form .full-width {
+  grid-column: 1 / 3;
+}
+
+.contact-form button,
+.contact-form .submit-btn,
+.contact-form .form-input,
+.contact-form textarea {
+  padding: 1em;
+}
+
+.contact-form button,
+.contact-form .submit-btn {
+  background: transparent;
+  border: 1px solid #ec1c24;
+  color: #ec1c24;
+  border-radius: 15px;
+  padding: 5px 20px;
+  text-transform: uppercase;
+}
+
+.contact-form button:hover,
+.contact-form .submit-btn:hover,
+.contact-form button:focus,
+.contact-form .submit-btn:focus {
+  background: #ec1c24;
+  outline: 0;
+  color: #eee;
+}
+
+.contact-form .error {
+  color: #ec1c24;
+}
