--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -4,6 +4,18 @@
     font-family: 'Roboto', sans-serif;
   }
   
+  .pg-footer i {
+    font-size: 30px;
+    
+  }
+ 
+  .pg-footer i span {
+    font-size: 11px;
+    margin: 3px;
+  
+
+   
+  }
   
   .footer {
       background-color: #004658;
